<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Git Sync</string>
    <string name="dismiss">Dismiss</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="gitignore_path">.gitignore</string>
    <string name="git_path">.git</string>
    <string name="git_config_path">.git/config</string>
    <string name="git_lock_path">.git/index.lock</string>
    <string name="git_merge_head_path">.git/MERGE_HEAD</string>
    <string name="git_merge_msg_path">.git/MERGE_MSG</string>
    <string name="git_info_exclude_path">.git/info/exclude</string>
    <string name="sync_start_pull">Syncing changes…</string>
    <string name="sync_start_push">Syncing local changes…</string>
    <string name="sync_not_required">Sync not required!</string>
    <string name="sync_complete">Sync complete!</string>
    <string name="enable_accessibility_service">Please enable Git Sync under "Installed apps"</string>
    <string name="network_unavailable">Network unavailable!\nGitSync will retry when reconnected</string>
    <string name="network_unavailable_retry">Network unavailable!\nGitSync will retry when reconnected</string>
    <string name="pull_failed">Pull failed! Please check for uncommitted changes and try again.</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="report_bug">&lt;GitSync Error&gt; Tap to send a bug report</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="enable_notifications">Enable notifications permission to see more.</string>
    <string name="out_of_memory">Application ran out of memory!</string>
    <string name="invalid_remote">Invalid remote! Modify this in settings</string>
    <string name="large_file">Singular files larger than 50MB not supported!</string>
    <string name="clone_failed">Failed to clone repository!</string>
    <string name="inaccessible_directory_message">Inaccessible directory! Please select a different location.</string>
    <string name="auto_rebase_failed_exception">Remote is further ahead than local and we could not automatically rebase for you, as it would cause non fast-forward update.</string>
    <string name="non_existing_exception">Remote ref didn\'t exist.</string>
    <string name="rejected_nodelete_exception">Remote ref update was rejected, because remote side doesn\'t support/allow deleting refs.</string>
    <string name="rejected_exception">Remote ref update was rejected.</string>
    <string name="rejection_with_reason_exception">Remote ref update was rejected because %s.</string>
    <string name="remote_changed_exception">Remote ref update was rejected, because old object id on remote repository wasn\'t the same as defined expected old object.</string>
    <string name="merging_exception_message">MERGING</string>
    <string name="repo_not_found">No commits found…</string>
    <string name="committed">committed</string>
    <string name="additions">%s ++</string>
    <string name="deletions" tools:ignore="TypographyDashes">%s --</string>
    <string name="auth">AUTH</string>
    <string name="git_dir_path_hint">/storage/emulated/0/…</string>
    <string name="deselect_repository_directory">deselect repository directory</string>
    <string name="select_repository_directory">select repository directory</string>
    <string name="enable_application_observer">Auto Sync Settings</string>
    <string name="application_not_set">Select App(s)</string>
    <string name="select_application">Select application(s)</string>
    <string name="multiple_application_selected">Selected (%s)</string>
    <string name="save_application">Save</string>
    <string name="sync_on_app_closed">Sync on app(s) closed</string>
    <string name="sync_on_app_opened">Sync on app(s) opened</string>
    <string name="default_container_name">alias</string>
    <string name="rename">Rename</string>
    <string name="rename_container">Rename Container</string>
    <string name="rename_container_msg">Enter a new name for the container</string>
    <string name="add">Add</string>
    <string name="add_container">Add Container</string>
    <string name="add_container_msg">Give your new container a unique name! This alias will help you easily identify it later.</string>
    <string name="confirm_container_delete">Confirm Container Deletion</string>
    <string name="confirm_container_delete_msg">Are you sure you want to delete the container \"%1$s\"? \n\nThis action cannot be undone.</string>
    <string name="clone_repo">Clone remote repository</string>
    <string name="pull">pull</string>
    <string name="git_repo_url_hint">https://git.abc/xyz.git</string>
    <string name="invalid_repository_url">Invalid repository URL!</string>
    <string name="clone_anyway">Clone anyway</string>
    <string name="i_have_a_local_repository">I have a local repository</string>
    <string name="cloning_repository">Cloning repository…</string>
    <string name="clone_message">DON\'T EXIT THIS SCREEN\nThis may take a while depending on the size of your repo\n\n</string>
    <string name="clone_repo_title">Select a repository</string>
    <string name="select_clone_directory">Select a folder to clone into</string>
    <string name="repository_not_found">Repository not found!</string>
    <string name="sync_now">Sync Changes</string>
    <string name="pull_changes">Pull Changes</string>
    <string name="force_push">Force Push</string>
    <string name="force_pushing">Force pushing…</string>
    <string name="confirm_force_push">Confirm Force Push</string>
    <string name="confirm_force_push_msg">Are you sure you want to force push these changes? \n\nThis action will overwrite the remote history and cannot be undone.</string>
    <string name="force_pull">Force Pull</string>
    <string name="force_pulling">Force pulling…</string>
    <string name="confirm_force_pull">Confirm Force Pull</string>
    <string name="confirm_force_pull_msg">Are you sure you want to force pull these changes? \n\nThis action will overwrite the local history and cannot be undone.</string>
    <string name="force_push_pull_message">Please do not close or exit the app until the process is complete.</string>
    <string name="manual_sync">Manual Sync</string>
    <string name="manual_sync_msg">Select the files you would like to sync</string>
    <string name="no_uncommitted_changes">No uncommitted changes</string>
    <string name="discard_changes_title">Discard Changes?</string>
    <string name="discard_changes_msg">Are you sure you want to discard all changes to \"%s\"? \n\nThis action cannot be undone.</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="merge_conflict_item_title">MERGE CONFLICT</string>
    <string name="merge_conflict_item_message">There is a merge conflict! Tap to resolve</string>
    <string name="merge_conflict">merge conflict</string>
    <string name="merge_dialog_message">Use the editor to resolve the merge conflicts</string>
    <string name="example_filepath">examplefile.md</string>
    <string name="abort_merge">abort merge</string>
    <string name="keep_changes">Keep changes</string>
    <string name="local">local</string>
    <string name="both">both</string>
    <string name="remote">remote</string>
    <string name="merge">Merge</string>
    <string name="merging">Merging…</string>
    <string name="resolving_merge">Resolving merge…</string>
    <string name="conflict_start"><![CDATA[<<<<<<<]]></string>
    <string name="conflict_separator">=======</string>
    <string name="conflict_end"><![CDATA[>>>>>>>]]></string>
    <string name="settings">Settings</string>
    <string name="sync_message_label">Sync Message</string>
    <string name="sync_message_description">use %s for the date and time</string>
    <string name="sync_message">Last Sync: %s (Mobile)</string>
    <string name="remote_label">default remote</string>
    <string name="default_remote">origin</string>
    <string name="author_name_label">author name</string>
    <string name="author_name">JohnSmith12</string>
    <string name="author_email_label">author email</string>
    <string name="author_email">john12@smith.com</string>
    <string name="gitignore">.GitIgnore</string>
    <string name="gitignore_description">list files or folders to ignore on all devices</string>
    <string name="gitignore_hint">.trash/\n./…</string>
    <string name="git_info_exclude">Git/info/exclude</string>
    <string name="git_info_exclude_description">list files or folders to ignore on this device</string>
    <string name="git_info_exclude_hint">.trash/\n./…</string>
    <string name="view_docs">View Documentation</string>
    <string name="docs_link">https://github.com/ViscousPot/GitSync/blob/master/Documentation.md</string>
    <string name="documentation_html_link"><![CDATA[<a href=\"%s\">DOCUMENTATION</a>]]></string>
    <string name="support_now">Contribute!</string>
    <string name="contribute_msg"><![CDATA[<b>Looks like you\'re a bit of a power user!</b><br/><br/>Your support can help keep the app running smoothly and evolving with a contribution as little as <b>$5</b> through GitHub Sponsors.]]></string>
    <string name="contribute_title">Support Our Work</string>
    <string name="support_promise">I have</string>
    <string name="contribute_link"><![CDATA[https://github.com/sponsors/ViscousPot?sponsor=ViscousPot&frequency=one-time&amount=15]]></string>
    <string name="select_your_git_provider_and_authenticate">Select your git provider and authenticate</string>
    <string name="oauth">oauth</string>
    <string name="ensure_token_scope">Ensure your token includes the \"repo\" scope for full functionality.</string>
    <string name="user">user</string>
    <string name="example_user">JohnSmith12</string>
    <string name="token">token</string>
    <string name="example_token">ghp_1234abcd5678efgh</string>
    <string name="login">login</string>
    <string name="pub_key">pub key</string>
    <string name="priv_key">priv key</string>
    <string name="ssh_pub_key_example">ssh-rsa AABBCCDDEEFF112233445566</string>
    <string name="ssh_priv_key_example">-----BEGIN RSA PRIVATE KEY----- AABBCCDDEEFF112233445566</string>
    <string name="generate_key">generate key</string>
    <string name="confirm_key_saved">confirm pub key saved</string>
    <string name="copied_text">Copied text!</string>
    <string name="confirm_priv_key_copy">Confirm Private Key Copy</string>
    <string name="confirm_priv_key_copy_msg">Are you sure you want to copy your private key to the clipboard? \n\nAnyone with access to this key can control your account. Ensure you paste it only in secure locations and clear your clipboard afterward.</string>
    <string name="understood">Understood</string>
    <string name="import_private_key">Import Private Key</string>
    <string name="import_private_key_msg">Paste your private key below to use an existing account. \n\nMake sure you are pasting the key in a secure environment, as anyone with access to this key can control your account.</string>
    <string name="import_key">import</string>
    <string name="accessibility_service_disclosure_title">Accessibility Service Disclosure</string>
    <string name="accessibility_service_disclosure_message">To enhance your experience,\nGitSync uses Android’s Accessibility Service to detect when apps are opened or closed.\n\nThis helps us provide tailored features without storing or sharing any data.\n\nᴘʟᴇᴀsᴇ ᴇɴᴀʙʟᴇ ɢɪᴛsʏɴᴄ ᴏɴ ᴛʜᴇ ɴᴇxᴛ sᴄʀᴇᴇɴ</string>
</resources>