<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/input_bg_md"
    android:backgroundTint="@color/card_bg"
    android:padding="@dimen/space_md"
    android:layout_margin="@dimen/space_lg"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_lg"
        android:textColor="@color/text_primary"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/settings"/>

    <TextView
        android:id="@+id/syncMessageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_md"
        android:textColor="@color/text_primary"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginTop="@dimen/space_md"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sync_message_label"/>

    <TextView
        android:id="@+id/syncMessageDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_sm"
        android:textColor="@color/text_secondary"
        android:layout_marginStart="@dimen/space_md"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/syncMessageLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sync_message_description"/>

    <EditText
        style="@style/SingleLineEditText"
        android:id="@+id/syncMessageInput"
        android:background="@drawable/input_bg_left"
        android:backgroundTint="@color/card_secondary_bg"
        android:hint="@string/sync_message"
        android:paddingHorizontal="@dimen/space_md"
        android:paddingVertical="@dimen/space_md"
        android:layout_width="match_parent"
        android:inputType="text"
        android:importantForAutofill="no"
        android:textColorHint="@color/text_secondary"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_md"
        android:layout_marginTop="@dimen/space_sm"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/syncMessageDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text=""/>

    <TextView
        android:id="@+id/gitIgnoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_md"
        android:textColor="@color/text_primary"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginTop="@dimen/space_lg"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/syncMessageInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/gitignore"/>

    <TextView
        android:id="@+id/gitIgnoreDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_sm"
        android:textColor="@color/text_secondary"
        android:layout_marginStart="@dimen/space_md"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/gitIgnoreLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/gitignore_description"/>

    <HorizontalScrollView
        android:id="@+id/gitignoreInputWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:background="@drawable/input_bg_left"
        android:backgroundTint="@color/card_secondary_bg"
        app:layout_constraintTop_toBottomOf="@+id/gitIgnoreDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/space_md"
        android:paddingVertical="@dimen/space_md"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/gitignoreInput"
            android:hint="@string/gitignore_hint"
            android:background="@null"
            android:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/space_xl"
            android:importantForAutofill="no"
            android:singleLine="false"
            android:maxLines="8"
            android:minLines="4"
            android:inputType="textMultiLine"
            android:textColorHint="@color/text_secondary"
            android:gravity="top|start"
            android:textSize="@dimen/text_size_md"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:text=""/>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/gitInfoExcludeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_md"
        android:textColor="@color/text_primary"
        android:layout_marginStart="@dimen/space_sm"
        android:layout_marginTop="@dimen/space_lg"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/gitignoreInputWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/git_info_exclude"/>

    <TextView
        android:id="@+id/gitInfoExcludeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_sm"
        android:textColor="@color/text_secondary"
        android:layout_marginStart="@dimen/space_md"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/gitInfoExcludeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/git_info_exclude_description"/>

    <HorizontalScrollView
        android:id="@+id/gitInfoExcludeInputWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:background="@drawable/input_bg_left"
        android:backgroundTint="@color/card_secondary_bg"
        app:layout_constraintTop_toBottomOf="@+id/gitInfoExcludeDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/space_md"
        android:paddingVertical="@dimen/space_md"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/gitInfoExcludeInput"
            android:hint="@string/git_info_exclude_hint"
            android:background="@null"
            android:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/space_xl"
            android:singleLine="false"
            android:importantForAutofill="no"
            android:maxLines="8"
            android:minLines="4"
            android:inputType="textMultiLine"
            android:textColorHint="@color/text_secondary"
            android:gravity="top|start"
            android:textSize="@dimen/text_size_md"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:text=""/>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>