<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/input_bg_sm"
    android:backgroundTint="@color/card_secondary_bg"
    android:padding="@dimen/space_sm"
    android:layout_marginTop="@dimen/space_sm"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/commitMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_xs"
        android:layout_marginBottom="1dp"
        android:ellipsize="none"
        android:requiresFadingEdge="horizontal"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/sync_message"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_md"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toStartOf="@id/commitRef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/space_sm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/additions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commitMessage"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:singleLine="true"
            android:text="@string/example_user"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_sm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/committed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constrainedWidth="true" />

        <TextView
            android:id="@+id/committed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_xxxs"
            android:text="@string/committed"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_sm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/author"/>

        <Chronometer
            android:id="@+id/commitDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_xxxs"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_sm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/committed"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/commitRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_user"
        android:textSize="@dimen/text_size_xs"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintTop_toTopOf="parent"
        android:insetTop="0dp"
        android:paddingHorizontal="@dimen/space_xxs"
        android:paddingVertical="@dimen/space_xxxs"
        android:textColor="@color/card_secondary_bg"
        android:enabled="false"
        android:textStyle="bold"
        android:backgroundTint="@color/text_secondary"
        android:insetBottom="0dp"
        android:minHeight="1dp"
        android:maxLength="7"
        android:layout_marginBottom="@dimen/space_xxxs"
        android:minWidth="1dp"
        app:cornerRadius="@dimen/corner_radius_xs"
        app:layout_constraintBottom_toTopOf="@id/deletions"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/additions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additions"
        android:textColor="@color/additions"
        android:textSize="@dimen/text_size_xs"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/space_xs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deletions"/>

    <TextView
        android:id="@+id/deletions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletions"
        android:textColor="@color/deletions"
        android:textSize="@dimen/text_size_xs"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/corner_radius_xs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>